force-app/main/default/objects/Account/fields/AccountCategory__c.field-meta.xml
<CustomField>
    <fullName>AccountCategory__c</fullName>
    <description>This value should be inherited based on the record Type CEP_CARDS_&lt;object&gt;/CEP_FPS_&lt;object&gt;</description>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cards</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>