force-app/main/default/objects/Account/fields/AccountOwner__c.field-meta.xml
<CustomField>
    <fullName>AccountOwner__c</fullName>
    <description>Temporary field to store the Owner of the Account in Dynamics. The field should be deleted when Sales Reps users are created in Salesforce.</description>
    <label>Account Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>