force-app/main/default/objects/Account/fields/AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountStatus__c</fullName>
    <description>Identifier if the customer is active or inactive</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>