force-app/main/default/objects/Account/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <label>Bank Account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>