force-app/main/default/objects/Account/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the name of OMV entity related to the company code. Example OMV Downstream GmbH</description>
    <label>OMV Entity</label>
    <referenceTo>CompanyCode__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>