force-app/main/default/objects/Account/fields/CTITechnicalPhone__c.field-meta.xml
<CustomField>
    <fullName>CTITechnicalPhone__c</fullName>
    <description>Technical field that stores the 7 digits of the (Field Name) so CTI can search the number in the Global Search</description>
    <label>Phone</label>
    <length>7</length>
    <type>Text</type>
</CustomField>