force-app/main/default/objects/Account/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <description>Segment of the customer according to cards business</description>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>International CRT</fullName>
            </value>
            <value>
                <fullName>National CRT</fullName>
            </value>
            <value>
                <fullName>National Fleet</fullName>
            </value>
            <value>
                <fullName>Neighborhood Fleet</fullName>
            </value>
            <value>
                <fullName>Leasing/Reseller</fullName>
            </value>
            <value>
                <fullName>Special Fleet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>