force-app/main/default/objects/Account/fields/CustomerServiceContact__c.field-meta.xml
<CustomField>
    <fullName>CustomerServiceContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CSO agent responsible for the customer account support</description>
    <label>Customer Service Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>