force-app/main/default/objects/Account/fields/CustomerSize__c.field-meta.xml
<CustomField>
    <fullName>CustomerSize__c</fullName>
    <description>Customer size according to CARDS business volumes contracted</description>
    <label>Customer Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Small &lt;5</fullName>
            </value>
            <value>
                <fullName>Small &lt;10</fullName>
            </value>
            <value>
                <fullName>Medium &lt;50</fullName>
            </value>
            <value>
                <fullName>Large &gt;50</fullName>
            </value>
            <value>
                <fullName>Very Large &gt;250</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>