force-app/main/default/objects/Account/fields/DunningEmail__c.field-meta.xml
<CustomField>
    <fullName>DunningEmail__c</fullName>
    <label>Dunning Email</label>
    <type>Email</type>
</CustomField>