force-app/main/default/objects/Account/fields/EInvoiceEmail__c.field-meta.xml
<CustomField>
    <fullName>EInvoiceEmail__c</fullName>
    <label>E-Invoice Email</label>
    <type>Email</type>
</CustomField>