force-app/main/default/objects/Account/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Field used to store external ID</description>
    <externalId>true</externalId>
    <label>Ext Customer ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>