force-app/main/default/objects/Account/fields/IFCSCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>IFCSCustomerNumber__c</fullName>
    <description>Unique number that will come from MS Dynamics in first stage and later one from IFCS (same number)</description>
    <label>IFCS Customer Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>