force-app/main/default/objects/Account/fields/InvoiceFormat__c.field-meta.xml
<CustomField>
    <fullName>InvoiceFormat__c</fullName>
    <description>Invoice format defined under object account</description>
    <label>Invoice format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>E-invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>