force-app/main/default/objects/Account/fields/InvoiceFrequency__c.field-meta.xml
<CustomField>
    <fullName>InvoiceFrequency__c</fullName>
    <description>Invoicing frequency, field under Account</description>
    <label>Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Daily</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Bi-weekly</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>