force-app/main/default/objects/Account/fields/LastUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateDate__c</fullName>
    <description>time stamp to identify the last update of the credit limit fields</description>
    <label>Last Update Date</label>
    <type>DateTime</type>
</CustomField>