force-app/main/default/objects/Account/fields/MigrationCustomerPortalAccount__c.field-meta.xml
<CustomField>
    <fullName>MigrationCustomerPortalAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag from MS Dynamics to identify current Accounts that have portal access</description>
    <label>Migration Customer Portal Account</label>
    <type>Checkbox</type>
</CustomField>