force-app/main/default/objects/Account/fields/OpenItems__c.field-meta.xml
<CustomField>
    <fullName>OpenItems__c</fullName>
    <label>Open Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>