force-app/main/default/objects/Account/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>Payment method defined under object account</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Sepa DD B2B</fullName>
            </value>
            <value>
                <fullName>SEPA DD Core</fullName>
            </value>
            <value>
                <fullName>Self-paying</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>