force-app/main/default/objects/Account/fields/PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerm__c</fullName>
    <description>Field under Account</description>
    <inlineHelpText>in Days</inlineHelpText>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>