force-app/main/default/objects/Account/fields/PreferredMethodOfContact__c.field-meta.xml
<CustomField>
    <fullName>PreferredMethodOfContact__c</fullName>
    <label>Preferred Method Of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>