force-app/main/default/objects/Account/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>