force-app/main/default/objects/Account/fields/RemainingCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>RemainingCreditLimit__c</fullName>
    <label>Remaining Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>