force-app/main/default/objects/Account/fields/SalesChannel__c.field-meta.xml
<CustomField>
    <fullName>SalesChannel__c</fullName>
    <description>Channel used to establish contact and business with the customer account for CARDS business</description>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Dlr Agent</fullName>
            </value>
            <value>
                <fullName>IKAM</fullName>
            </value>
            <value>
                <fullName>FBAM</fullName>
            </value>
            <value>
                <fullName>OBAM</fullName>
            </value>
            <value>
                <fullName>CSO</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Cooperation</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Filling Station</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>