force-app/main/default/objects/Account/fields/SalesRepresentativeTitle__c.field-meta.xml
<CustomField>
    <fullName>SalesRepresentativeTitle__c</fullName>
    <description>which title Sales Representative have</description>
    <label>Sales Representative Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>