force-app/main/default/objects/Account/fields/SAPCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>SAPCompanyCode__c</fullName>
    <description>Displays the company code as example A01</description>
    <formula>CompanyCode__r.SAPCompanyCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Code</label>
    <type>Text</type>
</CustomField>