force-app/main/default/objects/Account/fields/SAPNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPNumber__c</fullName>
    <description>SAP Number, updated automatically from SAP</description>
    <label>SAP Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>