force-app/main/default/objects/Account/fields/TradeRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>TradeRegistrationNumber__c</fullName>
    <description>Company registration number, if not available VAT/TAX number should be provided</description>
    <label>Trade Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>