force-app/main/default/objects/Account/fields/VAT_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Tax_Number__c</fullName>
    <description>Field to store tax or vat number of customers, if not available Trade registration number should be provided</description>
    <label>VAT/Tax Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>