force-app/main/default/objects/Account/recordTypes/CEPCardsAccount.recordType-meta.xml
<RecordType>
    <fullName>CEPCardsAccount</fullName>
    <active>true</active>
    <label>CEP Cards Account</label>
</RecordType>