force-app/main/default/objects/Account/recordTypes/FPS.recordType-meta.xml
<RecordType>
    <fullName>FPS</fullName>
    <active>true</active>
    <label>FPS</label>
</RecordType>