force-app/main/default/objects/Account/recordTypes/FPS_Bor_Account.recordType-meta.xml
<RecordType>
    <fullName>FPS_Bor_Account</fullName>
    <active>true</active>
    <description>Account record type that targets FPS Borealis POC Accounts</description>
    <label>FPS Bor Account</label>
</RecordType>