force-app/main/default/objects/Account/validationRules/InvalidPeriodToAccountCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>InvalidPeriodToAccountCreation</fullName>
    <active>true</active>
    <description>New accounts should not be created in Salesforce during the interim period. Please follow legacy process or contact your Superuser</description>
    <errorConditionFormula>AND(
		ISNEW() &amp;&amp;
$Profile.Name &lt;&gt; &apos;Integration User&apos; &amp;&amp;
 $Organization.Id  = &apos;00D09000004VzNe&apos;) &amp;&amp; $RecordType.DeveloperName =&apos;CEPCardsAccount&apos;</errorConditionFormula>
    <errorMessage>New accounts should not be created in Salesforce during the interim period. Please follow legacy process or contact your Superuser</errorMessage>
</ValidationRule>